# ralphify

./: .gitignore  CLAUDE.md  PROMPT.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
.ralph/prompts/ui/: PROMPT.md
.ralphify/ralphs/research-growth-hacking/: RALPH.md
.ralphify/ralphs/research-harness-engineering/: RALPH.md
.ralphify/ralphs/research-jobs-to-be-done/: RALPH.md
agent_docs/: CODEBASE_MAP.md
context/workspace/design-docs/: index.md  primitive-space.md  seo-website-strategy.md
context/workspace/research/: simplify-ux.md
docs/: agents.md  api.md  best-practices.md  changelog.md  cli.md  contributing.md  cookbook.md  dashboard.md  faq.md  getting-started.md  how-it-works.md  index.md  primitives.md  prompts.md  quick-reference.md  ralphs.md  troubleshooting.md  why-ralphify.md
docs/contributing/: codebase-map.md  index.md
docs/stylesheets/: extra.css
src/ralphify/: __init__.py  _agent.py  _console_emitter.py  _discovery.py  _events.py  _frontmatter.py  _output.py  _run_types.py  _runner.py  _templates.py  checks.py  cli.py  contexts.py  detector.py  engine.py  instructions.py  manager.py  prompts.py  ralphs.py  resolver.py
src/ralphify/ui/: __init__.py  app.py  models.py  persistence.py
src/ralphify/ui/api/: primitives.py  runs.py  ws.py
src/ralphify/ui/frontend/: build.js  package-lock.json  package.json
tests/: conftest.py  test_checks.py  test_cli.py  test_contexts.py  test_discovery.py  test_engine.py  test_instructions.py  test_manager.py  test_persistence.py  test_prompts.py  test_ralphs.py
(+3 files in other folders)
