[project]
name = "ralphify"
version = "0.1.3"
description = "Harness toolkit for autonomous AI coding loops"
requires-python = ">=3.11"
dependencies = ["typer>=0.9", "rich>=13.0"]

[project.scripts]
ralph = "ralphify:main"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
    "pytest>=8.0",
]

[project.urls]
Documentation = "https://computerlovetech.github.io/ralphify/"
Repository = "https://github.com/computerlovetech/ralphify"
Issues = "https://github.com/computerlovetech/ralphify/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ralphify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
